crates/toml_edit/tests/snapshots/invalid/local-time/second-over.stderr
TOML parse error at line 3, column 5
  |
3 | d = 00:00:61
  |     ^^^^^^^^
invalid time, expected second between 00 and 60
